--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@emailjs/browser": "^4.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-modal": "^3.16.1"
+    "react-modal": "^3.16.1",
+    "react-scroll": "^1.9.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
